--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
-@media screen and (max-width: 898px) {
+@media screen and (max-width: 699px) {
   main {
     width: 100%;
+    margin: 60px 20px;
   }
   footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
+  .clickmenu {
+    height: 48vh;
+    width: calc(48vh * 0.7071);
+  }
 }
 
-@media screen and (min-width: 899px) {
+@media screen and (min-width: 700px) {
+  .clickmenu {
+    height: 33vh;
+    width: calc(33vh * 0.7071);
+  }
   main {
     width: 70.71vh;
   }
@@ -17,11 +26,6 @@
     -ms-flex-pack: distribute;
         justify-content: space-around;
   }
-}
-
-.clickmenu {
-  height: 32vh;
-  width: calc(32vh * 0.7071);
 }
 
 body {
@@ -68,14 +72,6 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-main .imageMenu {
-  width: 100%;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -86,9 +82,17 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.imageMenu {
+  width: 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 a {
@@ -96,19 +100,8 @@ a {
   text-decoration: none;
 }
 
-#buttonMenu {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 2.5vh;
-}
-
 .clickmenu {
-  background-color: #fcdfdb;
-  margin: 2%;
+  margin: 1vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -123,60 +116,105 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition-duration: 1000ms;
+          transition-duration: 1000ms;
 }
 
-.clickmenu lne {
+.clickmenu:hover {
+  opacity: 0.5;
+  font-size: 1.5em;
+}
+
+.clickmenu__lne {
   background-color: #fcdfdb;
   color: #492025;
+  font-weight: bold;
 }
 
-.clickmenu lcf {
+.clickmenu__lne--h2 {
+  font-family: 'Roboto Slab', serif;
+  font-family: 'Alex Brush', cursive;
+  margin-top: 0;
+}
+
+.clickmenu__lcf {
   background-color: #fff5fe;
   font-family: 'Roboto Slab', serif;
   font-family: 'EB Garamond', serif;
   color: #920fcf;
 }
 
-.h2Lne {
-  font-family: 'Roboto Slab', serif;
-  font-family: 'Alex Brush', cursive;
-  margin-top: 0;
-}
-
-.fa-music {
-  color: #dd65d3;
-}
-
-.pBold {
-  font-weight: bold;
-}
-
-#pap {
+.clickmenu__pap {
   background-color: #edefef;
   color: blue;
 }
 
-.h2Pap {
+.clickmenu__pap--h2 {
   font-family: 'Roboto Slab', serif;
   font-family: 'Alex Brush', cursive;
   font-family: 'Mr Dafoe', cursive;
 }
 
-#plt {
+.clickmenu__plt {
   background-color: #fdfffd;
   color: chartreuse;
 }
 
-.h2Plt {
+.clickmenu__plt--h2 {
   font-family: 'Alex Brush', cursive;
   font-family: 'Mr Dafoe', cursive;
   font-family: 'Roboto Slab', serif;
   font-family: 'Merienda One', cursive;
 }
 
-#buttonProch {
-  padding: 0.5vh 4vh;
-  font: 1.4em sans-serif;
+.fa-music {
+  color: #dd65d3;
+}
+
+#buttonMenu {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 2.5vh;
+}
+
+@-webkit-keyframes suspension {
+  0% {
+    content: '';
+  }
+  25% {
+    content: '.';
+  }
+  50% {
+    content: '..';
+  }
+  75% {
+    content: '...';
+  }
+  100% {
+    content: '';
+  }
+}
+
+@keyframes suspension {
+  0% {
+    content: '';
+  }
+  25% {
+    content: '.';
+  }
+  50% {
+    content: '..';
+  }
+  75% {
+    content: '...';
+  }
+  100% {
+    content: '';
+  }
 }
 
 footer {
@@ -190,11 +228,126 @@ footer {
   text-align: center;
 }
 
-.afooter {
+.aProch {
   padding: 20px;
   background-color: #579c87;
   border: none;
   border-radius: 15px;
   font-family: sans-serif;
+  width: 180px;
+  margin-top: 2vh;
+  padding: 0.5vh 4vh;
+  font: 1.4em sans-serif;
+}
+
+.aProch:after {
+  display: inline-block;
+  -webkit-animation: suspension 2s infinite;
+          animation: suspension 2s infinite;
+  content: '';
+}
+
+.aFooter {
+  margin: 20px;
+  font-size: 1.4em;
+}
+
+.aFooter:hover {
+  -webkit-animation: wiggle 0.7s;
+          animation: wiggle 0.7s;
+}
+
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: translate(1px, 1px) rotate(0deg);
+            transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+            transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    -webkit-transform: translate(-3px, 0px) rotate(1deg);
+            transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    -webkit-transform: translate(3px, 2px) rotate(0deg);
+            transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    -webkit-transform: translate(1px, -1px) rotate(1deg);
+            transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+            transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    -webkit-transform: translate(-3px, 1px) rotate(0deg);
+            transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    -webkit-transform: translate(3px, 1px) rotate(-1deg);
+            transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    -webkit-transform: translate(-1px, -1px) rotate(1deg);
+            transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    -webkit-transform: translate(1px, 2px) rotate(0deg);
+            transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(1px, -2px) rotate(-1deg);
+            transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    -webkit-transform: translate(1px, 1px) rotate(0deg);
+            transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+            transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    -webkit-transform: translate(-3px, 0px) rotate(1deg);
+            transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    -webkit-transform: translate(3px, 2px) rotate(0deg);
+            transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    -webkit-transform: translate(1px, -1px) rotate(1deg);
+            transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+            transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    -webkit-transform: translate(-3px, 1px) rotate(0deg);
+            transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    -webkit-transform: translate(3px, 1px) rotate(-1deg);
+            transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    -webkit-transform: translate(-1px, -1px) rotate(1deg);
+            transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    -webkit-transform: translate(1px, 2px) rotate(0deg);
+            transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(1px, -2px) rotate(-1deg);
+            transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 /*# sourceMappingURL=style.css.map */
