--- a/style.scss
+++ b/style.scss
@@ -7,42 +7,35 @@ $brown:#492025;
 $clearcyan:#edefef;
 $cleargreen:#fdfffd;
 
-
-
-@media screen and (max-width: 898px){
-
-
-    main{
+@media screen and (max-width:699px){
+        main{
         width: 100%;
+        margin: 60px 20px;
     }
 
     footer{
         justify-content: space-between;
     }
 
+    .clickmenu{
+        height: 48vh;
+        width: calc(48vh * 0.7071);
+    }
 }
+@media screen and (min-width:700px){
 
-
-@media screen and (min-width: 899px){
-
-    main{
+    .clickmenu{
+        height: 33vh;
+        width: calc(33vh * 0.7071);
+    }
+        main{
         width: 70.71vh;
     }
 
     footer{
         justify-content: space-around;
     }
-
-    
 }
-
-
-
-
-    .clickmenu{
-        height: 32vh;
-        width: calc(32vh * 0.7071);
-    }
 
 
 body{
@@ -73,98 +66,97 @@ main{
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-around;
-    .imageMenu{
-    width: 100%;
-    flex-wrap: wrap;
     justify-content: center;
-    }
+    
 }
 
 nav{
     margin: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
-
+.imageMenu{
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    }
 
 
 a{
     color: $orange;
     text-decoration: none;
 }
-#buttonMenu{
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2.5vh;
-}
+
 .clickmenu{
-    background-color: $pink;
-    margin: 2%;
+    margin: 1vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
-    & lne{
-    background-color: $pink;
-    color:$brown; 
+    transition-duration: 1000ms;
+    &:hover{
+        opacity: 0.5;
+        font-size: 1.5em;
     }
-    & lcf{
+    &__lne{
+    background-color: $pink;
+    color:$brown;
+    font-weight: bold;
+        &--h2{
+        font-family: 'Roboto Slab', serif;
+        font-family: 'Alex Brush', cursive;
+        margin-top: 0;
+        }
+        
+    }
+    &__lcf{
     background-color: $sakura;
     font-family: 'Roboto Slab', serif;
     font-family: 'EB Garamond', serif;
     color: rgb(146, 15, 207);
     }
+    &__pap{
+    background-color: $clearcyan;
+    color: blue;
+        &--h2{
+        font-family: 'Roboto Slab', serif;
+        font-family: 'Alex Brush', cursive;
+        font-family: 'Mr Dafoe', cursive;
+        }
+    }
+    &__plt{
+    background-color: $cleargreen;
+    color: chartreuse;
+        &--h2{
+            font-family: 'Alex Brush', cursive;
+            font-family: 'Mr Dafoe', cursive;
+            font-family: 'Roboto Slab', serif;
+            font-family: 'Merienda One', cursive;
+        }
+    }
+
 
 }
 
-.h2Lne{
-        font-family: 'Roboto Slab', serif;
-        font-family: 'Alex Brush', cursive;
-        margin-top: 0;
-        }
 
 .fa-music{
     color: rgb(221, 101, 211);
 }
 
-
-
-
-.pBold{
-    font-weight: bold;
+#buttonMenu{
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2.5vh;
 }
 
-#pap{
-    background-color: $clearcyan;
-    color: blue;
-}
-
-.h2Pap{
-    font-family: 'Roboto Slab', serif;
-    font-family: 'Alex Brush', cursive;
-    font-family: 'Mr Dafoe', cursive;
-    
-}
-
-#plt{
-    background-color: $cleargreen;
-    color: chartreuse;
-}
-
-.h2Plt{
-    font-family: 'Alex Brush', cursive;
-    font-family: 'Mr Dafoe', cursive;
-    font-family: 'Roboto Slab', serif;
-    font-family: 'Merienda One', cursive;
-}
-
-#buttonProch{
-     
-     padding: 0.5vh 4vh;
-     font: 1.4em sans-serif;
-}
+@keyframes suspension {
+    0%   { content: ''; }
+    25%  { content: '.'; }
+    50%  { content: '..'; }
+    75%  { content: '...'; }
+    100% { content: ''; }
+  }
 
 footer{
     position: fixed;
@@ -175,14 +167,41 @@ footer{
     text-align: center;
 }
 
-.afooter{
+.aProch{
     padding: 20px;
     background-color: $green;
     border: none;
     border-radius: 15px;
     font-family: sans-serif;
-    
+    width: 180px;
+     margin-top: 2vh;
+     padding: 0.5vh 4vh;
+     font: 1.4em sans-serif;
+    &:after {
+        display: inline-block;
+        animation: suspension 2s infinite;
+        content: '';
+    }
 }
 
- 
+.aFooter{
+    margin: 20px;
+    font-size: 1.4em;
+    &:hover{
+        animation:wiggle 0.7s;
+    }
+}
 
+@keyframes wiggle {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
