--- a/stylemenu.css
+++ b/stylemenu.css
@@ -56,29 +56,17 @@
 }
 
 @media screen and (max-width: 1023px) {
-  header {
-    width: 100%;
-  }
   main {
-    width: 100%;
-  }
-  footer {
     width: 100%;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  header {
-    width: 70.71vh;
-  }
   .clickmenu {
     height: 32vh;
     width: calc(32vh * 0.7071);
   }
   main {
-    width: 70.71vh;
-  }
-  footer {
     width: 70.71vh;
   }
 }
@@ -102,6 +90,7 @@ body {
 }
 
 header {
+  width: 100%;
   background-color: #579c87;
   color: #fdcb46;
 }
@@ -118,6 +107,28 @@ h2 {
 
 h3 {
   margin: 0.5vh 0;
+  text-decoration: none;
+  line-height: 50px;
+  padding: 0 10px;
+  text-align: center;
+  font-size: 1.3em;
+  text-transform: uppercase;
+}
+
+h3:after {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 2px;
+  width: 0;
+  background: transparent;
+  -webkit-transition: width .5s ease, background-color .5s ease;
+  transition: width .5s ease, background-color .5s ease;
+}
+
+h3:hover:after {
+  width: 50%;
+  background: black;
 }
 
 #logo {
@@ -162,7 +173,7 @@ article {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  margin: 1.5vh;
+  margin: 1.2vh;
 }
 
 #lne {
@@ -280,21 +291,117 @@ a {
 footer {
   position: fixed;
   bottom: 0;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background-color: #579c87;
   text-align: center;
 }
 
-.afooter {
-  padding: 20px;
-  background-color: #579c87;
-  border: none;
-  border-radius: 15px;
-  font-family: sans-serif;
+.aFooter {
+  margin: 20px;
+  font-size: 1.4em;
+}
+
+.aFooter:hover {
+  -webkit-animation: wiggle 0.7s;
+          animation: wiggle 0.7s;
+}
+
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: translate(1px, 1px) rotate(0deg);
+            transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+            transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    -webkit-transform: translate(-3px, 0px) rotate(1deg);
+            transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    -webkit-transform: translate(3px, 2px) rotate(0deg);
+            transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    -webkit-transform: translate(1px, -1px) rotate(1deg);
+            transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+            transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    -webkit-transform: translate(-3px, 1px) rotate(0deg);
+            transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    -webkit-transform: translate(3px, 1px) rotate(-1deg);
+            transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    -webkit-transform: translate(-1px, -1px) rotate(1deg);
+            transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    -webkit-transform: translate(1px, 2px) rotate(0deg);
+            transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(1px, -2px) rotate(-1deg);
+            transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    -webkit-transform: translate(1px, 1px) rotate(0deg);
+            transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+            transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    -webkit-transform: translate(-3px, 0px) rotate(1deg);
+            transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    -webkit-transform: translate(3px, 2px) rotate(0deg);
+            transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    -webkit-transform: translate(1px, -1px) rotate(1deg);
+            transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+            transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    -webkit-transform: translate(-3px, 1px) rotate(0deg);
+            transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    -webkit-transform: translate(3px, 1px) rotate(-1deg);
+            transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    -webkit-transform: translate(-1px, -1px) rotate(1deg);
+            transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    -webkit-transform: translate(1px, 2px) rotate(0deg);
+            transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(1px, -2px) rotate(-1deg);
+            transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 /*# sourceMappingURL=stylemenu.css.map */
