--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ header {
 h1 {
   font-family: sans-serif;
   letter-spacing: -0.075em;
+  margin: 10px 0;
 }
 
 main {
@@ -75,6 +76,7 @@ main {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 14vh;
 }
 
 nav {
