--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
+  .aFooter {
+    margin: 7px;
+  }
   .clickmenu {
     height: 48vh;
     width: calc(48vh * 0.7071);
@@ -25,6 +28,9 @@
   footer {
     -ms-flex-pack: distribute;
         justify-content: space-around;
+  }
+  .aFooter {
+    margin: 20px;
   }
 }
 
@@ -76,7 +82,6 @@ main {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 14vh;
 }
 
 nav {
@@ -250,7 +255,6 @@ footer {
 }
 
 .aFooter {
-  margin: 20px;
   font-size: 1.4em;
 }
 
