maj color finish

--- a/style.css
+++ b/style.css
@@ -153,7 +153,11 @@ a {
 
 .clickmenu__pap {
   background-color: #edefef;
-  color: blue;
+  background-image: -webkit-gradient(linear, left top, right top, from(#24b8fc), color-stop(#2470fc), to(#2e00fc));
+  background-image: linear-gradient(to right, #24b8fc, #2470fc, #2e00fc);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .clickmenu__pap--h2 {
@@ -164,7 +168,11 @@ a {
 
 .clickmenu__plt {
   background-color: #fdfffd;
-  color: chartreuse;
+  background-image: -webkit-gradient(linear, left top, right top, from(#029e487e), to(#e1fd7a));
+  background-image: linear-gradient(to right, #029e487e, #e1fd7a);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .clickmenu__plt--h2 {
