--- a/stylemenu.css
+++ b/stylemenu.css
@@ -294,7 +294,7 @@ article {
 }
 
 #pap {
-  background-color: #edefef;
+  background-color: #ebfafa;
   font-family: cursive;
 }
 
@@ -306,7 +306,7 @@ article {
 }
 
 #plt {
-  background-color: #fdfffd;
+  background-color: #f5fff5;
   font-family: cursive;
 }
 
