--- a/stylemenu.scss
+++ b/stylemenu.scss
@@ -4,8 +4,8 @@ $white:#ffffff;
 $pink:#fcdfdb;
 $sakura:#fff5fe;
 $brown:#492025;
-$clearcyan:#edefef;
-$cleargreen:#fdfffd;
+$clearcyan:#ebfafa;
+$cleargreen:#f5fff5;
 $blue1:#24b8fc;
 $blue2:#2470fc;
 $blue3:#2e00fc;
