--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 
 header {
   width: 100%;
-  background-color: #579c87;
+  background-color: #cf1ddf;
   color: #fdcb46;
   text-align: center;
 }
@@ -200,6 +200,36 @@ a {
   margin-bottom: 2.5vh;
 }
 
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #cf1ddf;
+  text-align: center;
+}
+
+.aProch {
+  padding: 20px;
+  background-color: #cf1ddf;
+  border: none;
+  border-radius: 15px;
+  font-family: sans-serif;
+  width: 180px;
+  margin-top: 2vh;
+  padding: 0.5vh 4vh;
+  font: 1.4em sans-serif;
+}
+
+.aProch:after {
+  display: inline-block;
+  -webkit-animation: suspension 2s infinite;
+          animation: suspension 2s infinite;
+  content: '';
+}
+
 @-webkit-keyframes suspension {
   0% {
     content: '';
@@ -234,36 +264,6 @@ a {
   100% {
     content: '';
   }
-}
-
-footer {
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #579c87;
-  text-align: center;
-}
-
-.aProch {
-  padding: 20px;
-  background-color: #579c87;
-  border: none;
-  border-radius: 15px;
-  font-family: sans-serif;
-  width: 180px;
-  margin-top: 2vh;
-  padding: 0.5vh 4vh;
-  font: 1.4em sans-serif;
-}
-
-.aProch:after {
-  display: inline-block;
-  -webkit-animation: suspension 2s infinite;
-          animation: suspension 2s infinite;
-  content: '';
 }
 
 .aFooter {
