--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-$green: #579c87;
+$green: #cf1ddf;
 $orange:#fdcb46;
 $white:#ffffff;
 $pink:#fcdfdb;
@@ -176,13 +176,7 @@ a{
     margin-bottom: 2.5vh;
 }
 
-@keyframes suspension {
-    0%   { content: ''; }
-    25%  { content: '.'; }
-    50%  { content: '..'; }
-    75%  { content: '...'; }
-    100% { content: ''; }
-  }
+
 
 footer{
     position: fixed;
@@ -211,7 +205,13 @@ footer{
     animation: suspension 2s infinite;
     content: '';
 }
-
+@keyframes suspension {
+    0%   { content: ''; }
+    25%  { content: '.'; }
+    50%  { content: '..'; }
+    75%  { content: '...'; }
+    100% { content: ''; }
+  }
 .aFooter{
     font-size: 1.4em;
     &:hover{
