--- a/style.scss
+++ b/style.scss
@@ -207,9 +207,10 @@ footer{
 }
 @keyframes suspension {
     0%   { content: ''; }
-    25%  { content: '.'; }
-    50%  { content: '..'; }
-    75%  { content: '...'; }
+    20%  { content: '.'; }
+    40%  { content: '..'; }
+    60%  { content: '...'; }
+    80%  { content: '....'; }
     100% { content: ''; }
   }
 .aFooter{
