--- a/style.scss
+++ b/style.scss
@@ -199,7 +199,12 @@ footer{
      font: 1.4em sans-serif;
 
 }
-
+.aProch::before
+.aProch:after{
+    display: inline-block;
+    animation: suspension 3s infinite;
+    content: 'suspension';
+}
 .aProch:after {
     display: inline-block;
     animation: suspension 3s infinite;
