--- a/style.css
+++ b/style.css
@@ -223,18 +223,14 @@ footer {
   font: 1.4em sans-serif;
 }
 
-.aProch::before
 .aProch:after {
   display: inline-block;
-  -webkit-animation: suspension 3s infinite;
-          animation: suspension 3s infinite;
-  content: '';
-}
-
-.aProch:after {
-  display: inline-block;
-  -webkit-animation: suspension 3s infinite;
-          animation: suspension 3s infinite;
+  -webkit-animation-name: suspension;
+          animation-name: suspension;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
   content: '';
 }
 
