--- a/style.scss
+++ b/style.scss
@@ -200,7 +200,7 @@ footer{
 
 }
 
-.aProch:after {
+#suspanim:after {
     display: inline-block;
     animation-name: suspension;
     animation-duration: 3s;
