--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ footer {
   font: 1.4em sans-serif;
 }
 
-.aProch:after {
+#suspanim:after {
   display: inline-block;
   -webkit-animation-name: suspension;
           animation-name: suspension;
