--- a/style.scss
+++ b/style.scss
@@ -208,9 +208,9 @@ footer{
     content: '';
 }
 @keyframes suspension {
-    0%   { content: ''; }
-    20%  { content: '.'; }
-    40%  { content: '..'; }
+    0%   {background-color: $blue1; content: ''; }
+    20%  {background-color: $blue2; content: '.'; }
+    40%  {background-color: $blue3; content: '..'; }
     60%  { content: '...'; }
     80%  { content: '....'; }
     100% { content: ''; }
