maj origin supension

--- a/style.scss
+++ b/style.scss
@@ -200,7 +200,7 @@ footer{
 
 }
 
-#suspanim:after {
+.aProch:after {
     display: inline-block;
     animation-name: suspension;
     animation-duration: 3s;
